# DLP

./: .gitignore  jupyter_job.batch  main.py  pyproject.toml
Week1/: TP1_Pb1_Multiclass.ipynb  results_ex1.csv
Week1/src/: model_sizes.py  models.py  optimizers.py
Week2/: TP2_GradCAM.ipynb  download.sh
Week3/: TP3.ipynb  class_model_gnn.py  jupyter_job.batch  message_passing.py  model.pth  my_model.pth  pyproject.toml  train_gnn.py
Week3/logs/: jupyter_28054.err  jupyter_28054.out  jupyter_28068.err
Week4/: GradCAM.ipynb  TP4.ipynb  last_layer.py  utils.py
Week5/: TP5.ipynb  results_KAPOTOS_DEGENEVE.npy  test.py
Week6/: TP6_generative_models.ipynb
logs/: jupyter_1020.err  jupyter_1020.out
