[project]
name = "dlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
